fixed menu position on overflowing screens; completed CHANGELOG for version 0.7.0

--- a/frontend/src/app/components/menu/menu.component.scss
+++ b/frontend/src/app/components/menu/menu.component.scss
@@ -1,4 +1,5 @@
-:host ::ng-deep .p-speeddial-direction-left {
+:host ::ng-deep .p-speeddial {
+    position: fixed;
     right: 1rem;
     bottom: 1rem;
 
